--- a/config.env
+++ b/config.env
@@ -1,3 +1,5 @@
-NODE_ENV="production"
-USER:"DINESH"
-PASSWORD:123456
+NODE_ENV=development
+
+DATABASE=mongodb+srv://@cluster0.uk3ac.mongodb.net/natours?retryWrites=true&w=majority
+userName=dineshshah8234
+userPass=5J6tKDcuz2tYpDP
