--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chromium": "^3.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
-    "slugify": "^1.5.0"
+    "slugify": "^1.5.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
