--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ NODE_ENV=development
 DATABASE=mongodb+srv://@cluster0.uk3ac.mongodb.net/natours?retryWrites=true&w=majority
 userName=dineshshah8234
 userPass=5J6tKDcuz2tYpDP
+
+
+jwt_secreat= I am super intelligent I love playing and doing gym
