--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chromium": "^3.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "slugify": "^1.5.0",
